carga de personajes sin rxjs lista

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+
+  <h1>Personajes de Dragon Ball</h1>
+  <button onclick="lastPage()" id="last-page">Página anterior</button>
+  <button onclick="nextPage()" id="next-page">Siguiente página</button>
+
+  <div id="characters-container"></div>
+  <script defer type="module" src="/src/main.ts"></script>
   </body>
 </html>
